--- a/assets/css/templatemo-tale-seo-agency.css
+++ b/assets/css/templatemo-tale-seo-agency.css
@@ -1888,6 +1888,9 @@ body {
     left: 50%;
     transform: translate(-23px, -23px);
   }
+  .header-logo-link{
+    top: -80px !important;
+  }
 }
 
 @media (max-width: 992px) {
@@ -1976,6 +1979,68 @@ body {
     padding: 30px;
   }
 }
+@media (max-width: 993px){
+  .nav{
+    display: none;
+  }
+  .menu-trigger{
+    display: inline-block !important;
+  }
+  .header-area {
+    top: 0px;
+  }
+  .main-banner {
+    margin-top: 100px !important;
+  }
+  .header-area .main-nav .nav li:nth-child(4) {
+    padding-right: 0px !important;
+  }
+  .header-area .main-nav .nav li {
+    background: #f7f7f7;
+    color: #000 !important;
+    text-align: center !important;
+  }
+  .header-area .main-nav .nav li a {
+    color: #000 !important;
+    margin: 0 auto !important;
+  }
+  .header-area .main-nav .nav li.has-sub ul.sub-menu {
+    display: none !important;
+  }
+  .main-banner  {
+    padding: 185px 0px !important;
+  }
+
+  .main-banner h4 {
+    font-size: 36px;
+    line-height: 44px;
+  }
+  .main-banner span {
+    margin: 0px 3px 0px 3px;
+  }
+  .main-banner .main-button a,
+  .main-banner .second-button a {
+    padding: 12px 20px;
+  }
+  .projects .item .down-content {
+    padding: 25px 15px 15px 15px;
+  }
+  .projects .item .down-content h4 {
+    text-align: center;
+    width: 100%;
+    font-size: 18px;
+  }
+  .projects .item .down-content a {
+    top: 0;
+    right: auto;
+    left: 50%;
+    transform: translate(-23px, -23px);
+  }
+}
+
+
+
+
 
 @media (max-width: 1000px) {
   .happy-clients .naccs .menu div {
@@ -1983,6 +2048,18 @@ body {
     font-size: 15px;
     border-right: none;
   }
+  .services::before {
+    top: 60%;
+    transform: translateY(-50%);
+  }
+
+  .nav{
+    margin-left: 0px;
+  }
+  .container{
+    padding: 0;
+  }
+
 }
 
 @media (max-width: 1200px) {
@@ -1990,12 +2067,41 @@ body {
     top: 60%;
     transform: translateY(-50%);
   }
+  .nav{
+    margin-left: 200px;
+  }
+
 }
 
+
 @media (max-width: 1400px) {
+  .nav{
+    margin-left: 200px;
+  }
   .main-banner .caption {
     background-color: rgba(250, 250, 250, 0.95);
     padding: 60px;
     border-radius: 23px;
+  }
+   .main-banner span {
+    margin: 0px 3px 0px 3px;
+  }
+  .main-banner .main-button a,
+  .main-banner .second-button a {
+    padding: 12px 20px;
+  }
+  .projects .item .down-content {
+    padding: 25px 15px 15px 15px;
+  }
+  .projects .item .down-content h4 {
+    text-align: center;
+    width: 100%;
+    font-size: 18px;
+  }
+  .projects .item .down-content a {
+    top: 0;
+    right: auto;
+    left: 50%;
+    transform: translate(-23px, -23px);
   }
 }
