--- a/assets/css/templatemo-tale-seo-agency.css
+++ b/assets/css/templatemo-tale-seo-agency.css
@@ -2075,12 +2075,7 @@ body {
     transform: translateY(-50%);
   }
 
-  .nav{
-    margin-left: 0px;
-  }
-  .container{
-    padding: 0;
-  }
+
 
 }
 
@@ -2099,6 +2094,9 @@ body {
 @media (max-width: 1400px) {
   .nav{
     margin-left: 200px;
+  }
+  .mobile-vides{
+    max-width: 1400px !important;
   }
   .main-banner .caption {
     background-color: rgba(250, 250, 250, 0.95);
