--- a/assets/css/templatemo-tale-seo-agency.css
+++ b/assets/css/templatemo-tale-seo-agency.css
@@ -1840,40 +1840,19 @@ Responsive Style
 body {
   overflow-x: hidden;
 }
-
-
-@media (max-width: 767px) {
-  .header-area .main-nav .nav {
-    position: absolute;
-    top: 0 !important;
-   /* margin-top: 110px !important; */
+@media (max-width: 1400px) {
+  .nav{
+    margin-left: 200px;
   }
-  .pre-header {
-    display: none;
+  .mobile-vides{
+    max-width: 1400px !important;
   }
-  .header-area {
-    top: 0px;
+  .main-banner .caption {
+    background-color: rgba(250, 250, 250, 0.95);
+    padding: 60px;
+    border-radius: 23px;
   }
-  .main-banner {
-    margin-top: 100px;
-  }
-  .header-area .main-nav .nav li:nth-child(4) {
-    padding-right: 0px !important;
-  }
-  .header-area .main-nav .nav li {
-    background: #f7f7f7;
-  }
-  .header-area .main-nav .nav li.has-sub ul.sub-menu {
-    display: none;
-  }
-  .main-banner  {
-    padding: 185px 0px;
-  }
-  .main-banner h4 {
-    font-size: 36px;
-    line-height: 44px;
-  }
-  .main-banner span {
+   .main-banner span {
     margin: 0px 3px 0px 3px;
   }
   .main-banner .main-button a,
@@ -1894,12 +1873,44 @@ body {
     left: 50%;
     transform: translate(-23px, -23px);
   }
-  .header-logo-link{
-    top: -80px !important;
-  }
 }
 
+@media (max-width: 1200px) {
+  .services::before {
+    top: 60%;
+    transform: translateY(-50%);
+  }
+  .nav{
+    margin-left: 200px;
+  }
+
+  .mobile-vides{
+    max-width: 1150px !important;
+  }
+
+}
+
+
+@media (max-width: 1000px) {
+  .happy-clients .naccs .menu div {
+    width: 24.5%;
+    font-size: 15px;
+    border-right: none;
+  }
+  .services::before {
+    top: 60%;
+    transform: translateY(-50%);
+  }
+
+  .mobile-vides{
+    max-width: 900px !important;
+  }
+
+}
 @media (max-width: 992px) {
+  .mobile-vides{
+    max-width: 850px !important;
+  }
   .pre-header .left-info ul li {
     padding-right: 10px;
     margin-right: 10px;
@@ -2058,52 +2069,51 @@ body {
     left: 50%;
     transform: translate(-23px, -23px);
   }
-}
-
-
-
-
-
-@media (max-width: 1000px) {
-  .happy-clients .naccs .menu div {
-    width: 24.5%;
-    font-size: 15px;
-    border-right: none;
-  }
-  .services::before {
-    top: 60%;
-    transform: translateY(-50%);
-  }
-
-
-
-}
-
-@media (max-width: 1200px) {
-  .services::before {
-    top: 60%;
-    transform: translateY(-50%);
-  }
-  .nav{
-    margin-left: 200px;
-  }
-
-}
-
-
-@media (max-width: 1400px) {
-  .nav{
-    margin-left: 200px;
-  }
   .mobile-vides{
-    max-width: 1400px !important;
+    max-width: 800px !important;
   }
-  .main-banner .caption {
-    background-color: rgba(250, 250, 250, 0.95);
-    padding: 60px;
-    border-radius: 23px;
+}
+@media(max-width: 800px) {
+  .mobile-vides{
+    max-width: 765px !important;
   }
-   .main-banner span {
+}
+
+@media (max-width: 767px) {
+  .mobile-vides{
+    max-width: 700px !important;
+  }
+  .header-area .main-nav .nav {
+    position: absolute;
+    top: 0 !important;
+   /* margin-top: 110px !important; */
+  }
+  .pre-header {
+    display: none;
+  }
+  .header-area {
+    top: 0px;
+  }
+  .main-banner {
+    margin-top: 100px;
+  }
+  .header-area .main-nav .nav li:nth-child(4) {
+    padding-right: 0px !important;
+  }
+  .header-area .main-nav .nav li {
+    background: #f7f7f7;
+  }
+  .header-area .main-nav .nav li.has-sub ul.sub-menu {
+    display: none;
+  }
+  .main-banner  {
+    padding: 185px 0px;
+  }
+  .main-banner h4 {
+    font-size: 36px;
+    line-height: 44px;
+  }
+  .main-banner span {
     margin: 0px 3px 0px 3px;
   }
   .main-banner .main-button a,
@@ -2124,7 +2134,16 @@ body {
     left: 50%;
     transform: translate(-23px, -23px);
   }
+  .header-logo-link{
+    top: -80px !important;
+  }
 }
+@media(max-width: 687px) {
+  .mobile-vides{
+    max-width: 570px !important;
+  }
+}
+
 
 @media(max-width: 579px) {
   .page-heading img {
@@ -2135,6 +2154,9 @@ body {
   .row{
     max-width: 500px;
   }
+  .mobile-vides{
+    max-width: 500px !important;
+  }
 }
 @media(max-width: 500px) {
   .page-heading img {
@@ -2143,6 +2165,9 @@ body {
   }
   .row{
     max-width: 450px;
+  }
+  .mobile-vides{
+    max-width: 450px !important;
   }
 }
 @media(max-width: 439px) {
@@ -2155,6 +2180,9 @@ body {
   }
   .row{
     max-width: 380px;
+  }
+  .mobile-vides{
+    max-width: 380px !important;
   }
 
 }
@@ -2169,6 +2197,9 @@ body {
   .row{
     max-width: 350px;
   }
+  .mobile-vides{
+    max-width: 350px !important;
+  }
 }
 @media(max-width: 350px) {
   .page-heading img {
@@ -2180,5 +2211,8 @@ body {
   }
   .video-thumb-img{
     max-width: 300px;
+  }
+  .mobile-vides{
+    max-width: 300px !important;
   }
 }
