--- a/assets/css/templatemo-tale-seo-agency.css
+++ b/assets/css/templatemo-tale-seo-agency.css
@@ -1837,9 +1837,18 @@ Responsive Style
 body {
   overflow-x: hidden;
 }
+.nav-language{
+  display: inline-block !important;
+}
+.language{
+  display: none;
+}
 @media (max-width: 1400px) {
   .nav{
     margin-left: auto;
+  }
+  .nav-language{
+    display: inline-block !important;
   }
   .mobile-vides{
     max-width: 1400px !important;
@@ -2012,6 +2021,12 @@ body {
 @media (max-width: 993px){
   .nav{
     display: none;
+  }
+  .language{
+    display: block;
+  }
+  .nav-language{
+    display: none !important;
   }
   .menu-trigger{
     display: inline-block !important;
